--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/FilipSigda/CS546_Final_Project_Writing#readme",
   "dependencies": {
     "express": "^4.21.1",
+    "handlebars": "^4.7.8",
     "mongodb": "^6.11.0"
   }
 }
