--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/FilipSigda/CS546_Final_Project_Writing#readme",
   "dependencies": {
     "express": "^4.21.1",
-    "handlebars": "^4.7.8",
+    "express-handlebars": "^8.0.1",
     "mongodb": "^6.11.0"
   }
 }
